2000-11-27  John Harper  <jsh@eazel.com>

	* widget.jl (make-choice-item): `value' defaults to first item
	in the menu (as in GTK+)

	* widgets/font.jl (make-font-item): expand text entry when
	packing it

2000-11-17  John Harper  <jsh@eazel.com>

	* widget.jl (make-choice-item): call _ function when printing
	option names

2000-11-16  John Harper  <jsh@eazel.com>

	* widgets/alist.jl: use prin1 style printing (i.e. no double
	quotes in strings, etc)

2000-11-14  John Harper  <jsh@eazel.com>

	* widgets/list.jl (make-list-item): connect to
	`key_press_event' of the clist, on `RET' edit the current item

2000-10-11  John Harper  <john@dcs.warwick.ac.uk>

	* widget.jl (string->symbol): use intern not read-from-string

2000-09-25  John Harper  <john@dcs.warwick.ac.uk>

	* widget.jl (tooltip-split, tooltip-set): new functions
	(make-widget): if the widget advertised that it takes a doc
	string, then handle any tooltip embedded in that string

2000-09-20  John Harper  <john@dcs.warwick.ac.uk>

	* version 0.31

2000-09-11  John Harper  <john@dcs.warwick.ac.uk>

	* widget.jl, widget-test.jl, ChangeLog: 
	* widgets/list.jl, widgets/color.jl, widgets/alist.jl: 

	No need to explicitly open `rep.io.streams' anymore

2000-09-08  John Harper  <john@dcs.warwick.ac.uk>

	* widget.jl, widget-test.jl: 
	* widgets/list.jl, widgets/color.jl, widgets/alist.jl: 

	Open the necessary modules that aren't included in `rep'
	structure anymore (rep.regexp, rep.system, rep.io.streams,
	rep.io.files, rep.io.file-handlers)

2000-09-01  John Harper  <john@dcs.warwick.ac.uk>

	* stock.jl.gtk, stock.jl.gnome (about-dialog, make-url-widget):
	new functions

	* widgets/program.jl, widgets/pair.jl, widgets/list.jl,
	widgets/font.jl, widgets/file.jl, widgets/color.jl,
	widgets/alist.jl, widgets/.cvsignore: 

	* widget.jl, widget-test.jl, widget-dialog.jl, stock.jl.gtk,
	stock.jl.gnome, color-preview.jl: 

	Moved here from the `nokogiri' directory. The plan is to use